WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190886
Web Inspector: Can't drag undocked Inspector window by its title text
https://bugs.webkit.org/show_bug.cgi?id=190886
Summary
Web Inspector: Can't drag undocked Inspector window by its title text
Michael Bailey
Reported
2018-10-24 11:45:31 PDT
Created
attachment 353047
[details]
Screen recording of bug When undocked, the Inspector window can't be dragged by its title text. Dragging elsewhere in the titlebar works, as does dragging in the toolbar. See attached screen recording for an example. Possibly related old bug that the search brought up for me when filing this one:
https://bugs.webkit.org/show_bug.cgi?id=135950
STP Release 68 (Safari 12.1, WebKit 14607.1.11)
Attachments
Screen recording of bug
(17.48 MB, video/quicktime)
2018-10-24 11:45 PDT
,
Michael Bailey
no flags
Details
[PATCH] Proposed Fix
(1.42 KB, patch)
2019-09-18 14:29 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2019-09-18 14:26:27 PDT
***
Bug 193071
has been marked as a duplicate of this bug. ***
Joseph Pecoraro
Comment 2
2019-09-18 14:27:43 PDT
<
rdar://problem/44574547
>
Joseph Pecoraro
Comment 3
2019-09-18 14:29:06 PDT
Created
attachment 379073
[details]
[PATCH] Proposed Fix
Tim Horton
Comment 4
2019-09-18 14:33:19 PDT
Comment on
attachment 379073
[details]
[PATCH] Proposed Fix You really should also send mail to AppKit folks.
Joseph Pecoraro
Comment 5
2019-09-18 14:58:30 PDT
> You really should also send mail to AppKit folks.
Done.
WebKit Commit Bot
Comment 6
2019-09-18 16:16:55 PDT
Comment on
attachment 379073
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 379073 Committed
r250063
: <
https://trac.webkit.org/changeset/250063
>
WebKit Commit Bot
Comment 7
2019-09-18 16:16:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug