Web Inspector: Can't drag undocked Inspector window by its title text https://bugs.webkit.org/show_bug.cgi?id=190886 <rdar://problem/44574547>

Reviewed by Tim Horton.

* UIProcess/mac/WKInspectorWKWebView.mm:
(-[WKInspectorWKWebView _opaqueRectForWindowMoveWhenInTitlebar]):
Legendary.


Canonical link: https://commits.webkit.org/215588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250063 268f45cc-cd09-0410-ab3c-d52691b4dbfc